[workspace]
resolver = "2"

[package]
name = "om_grrs"
version = "0.1.0"
authors = ["Oisin Mulvihill <oisin.mulvihill@gmail.com>"]
license = "MIT"
description = "A tool to search files"
readme = "README.md"
homepage = "https://github.com/oisinmulvihill/om-grrs"
repository = "https://github.com/oisinmulvihill/om-grrs"
keywords = ["cli", "search", "demo"]
categories = ["command-line-utilities"]

[profile.dev]
# The development profile, used for `cargo build`
opt-level = 0  # Controls the --opt-level the compiler builds with
debug = true   # Controls whether the compiler passes `-g`

[profile.release]
# The release profile, used for `cargo build --release`
opt-level = 3
debug = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.7", features = ["derive"]}
env_logger = "0.11.3"
log = "0.4.21"
